# HOAM

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
src/hoam/: __init__.py  cli.py  evaluate.py  inference.py  knn.py  metrics.py  train.py  utils.py  visualize.py
src/hoam/data/: __init__.py  statistics.py  transforms.py
src/hoam/losses/: hybrid_margin.py
src/hoam/models/: __init__.py  base.py  hoam.py
