[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
 
[project]
name = "hoam_project"
version = "0.1.0"
description = "HOAM & HOAMV2 models for metric learning"
authors = [ { name = "Your Name", email = "you@example.com" } ]
license = { text = "MIT" }
readme = "README.md"
packages = ["src/hoam_project"]
 
[project.dependencies]
torch = ">=2.0.0"
timm = ">=0.8.0"
pytorch-metric-learning = ">=1.3.0"
scikit-learn = ">=1.0.0"
pandas = ">=1.3.0"
pyyaml = ">=6.0"
oh Hydra = ">=1.3.0"
op pytorch-lightning = ">=2.0.0"
numpy = ">=1.21.0"
Pillow = ">=9.0.0"