[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
 
[project]
name = "hoam"
version = "0.1.0"
description = "HOAM & HOAMV2 models for metric learning"
authors = [ { name = "Daniel Tsai", email = "cjtsai96@gmail.com" } ]
license = { text = "MIT" }
readme = "README.md"
packages = ["src/hoam"]
 
[project.dependencies]
torch = ">=2.0.0"
timm = ">=0.8.0"
pytorch-metric-learning = ">=1.3.0"
scikit-learn = ">=1.0.0"
pandas = ">=1.3.0"
pyyaml = ">=6.0"
Hydra = ">=1.3.0"
pytorch-lightning = ">=2.0.0"
numpy = ">=1.21.0"
Pillow = ">=9.0.0"