[project]
name = "hoam"
version = "0.1.0"
description = "HOAM & HOAMV2 models for metric learning"
authors = [ { name = "Daniel Tsai", email = "cjtsai96@gmail.com" } ]
license = { text = "MIT" }
readme = "README.md"
packages = ["src/hoam"]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.0",
    "faiss-cpu>=1.7.0",
    "hydra-core>=1.3.0",
    "joblib>=1.0.0",
    "lightning>=2.0.0",
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "pandas>=1.3.0",
    "pillow>=9.0.0",
    "pytorch-metric-learning>=1.3.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.0.0",
    "timm>=0.8.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
 
[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
 
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
